// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List.Item /> should render with a link 1`] = `
<Item
  className={null}
  image={null}
  isDisabled={false}
  isSelected={false}
  link="url/to/somewhere"
  onClick={null}
  rightComponent={null}
  testId={null}
  title="My Title"
>
  <Glow
    className={null}
    color="#f7f7f7"
    styles={
      Object {
        "container": null,
        "glow": null,
      }
    }
  >
    <div
      aria-hidden={true}
      className="css-13azwyo"
      onTouchTap={[Function]}
      style={null}
    >
      <div
        className="css-1bmd5dz"
        style={Object {}}
      />
      <Link
        className=""
        disabled={false}
        href="url/to/somewhere"
        onClick={null}
      >
        <div
          aria-hidden={true}
          className="css-c6ki83 "
          data-test-id="link: url/to/somewhere"
          onClick={[Function]}
          role="link"
        >
          <div
            data-test-id={null}
          >
            <Grid
              className="css-1qcr7hz"
              component="div"
              wrap={false}
            >
              <div
                className="css-1qcr7hz css-h7r55a"
              >
                <GridItem
                  className="css-10fxwvh"
                  component="div"
                  grow={1}
                  shrink={1}
                >
                  <div
                    className="css-10fxwvh css-1gs0ko2"
                  >
                    My Title
                  </div>
                </GridItem>
              </div>
            </Grid>
          </div>
        </div>
      </Link>
    </div>
  </Glow>
</Item>
`;

exports[`<List.Item /> should render with a right component 1`] = `
<Item
  className={null}
  image={null}
  isDisabled={false}
  isSelected={false}
  link={null}
  onClick={null}
  rightComponent={
    <span>
      I\`m a span.
    </span>
  }
  testId={null}
  title="My Title"
>
  <div
    data-test-id={null}
  >
    <Grid
      className="css-1qcr7hz"
      component="div"
      wrap={false}
    >
      <div
        className="css-1qcr7hz css-h7r55a"
      >
        <GridItem
          className="css-10fxwvh"
          component="div"
          grow={1}
          shrink={1}
        >
          <div
            className="css-10fxwvh css-1gs0ko2"
          >
            My Title
          </div>
        </GridItem>
        <GridItem
          className=""
          component="div"
          grow={1}
          shrink={1}
        >
          <div
            className=" css-1gs0ko2"
          >
            <span>
              I\`m a span.
            </span>
          </div>
        </GridItem>
      </div>
    </Grid>
  </div>
</Item>
`;

exports[`<List.Item /> should render with a title but no image 1`] = `
<Item
  className={null}
  image={null}
  isDisabled={false}
  isSelected={false}
  link={null}
  onClick={null}
  rightComponent={null}
  testId={null}
  title="My Title"
>
  <div
    data-test-id={null}
  >
    <Grid
      className="css-1qcr7hz"
      component="div"
      wrap={false}
    >
      <div
        className="css-1qcr7hz css-h7r55a"
      >
        <GridItem
          className="css-10fxwvh"
          component="div"
          grow={1}
          shrink={1}
        >
          <div
            className="css-10fxwvh css-1gs0ko2"
          >
            My Title
          </div>
        </GridItem>
      </div>
    </Grid>
  </div>
</Item>
`;

exports[`<List.Item /> should render with an image 1`] = `
<Item
  className={null}
  image={
    <img
      alt="Alternative text"
      src="url/to/image"
    />
  }
  isDisabled={false}
  isSelected={false}
  link={null}
  onClick={null}
  rightComponent={null}
  testId={null}
  title="My Title"
>
  <div
    data-test-id={null}
  >
    <Grid
      className="css-1qcr7hz"
      component="div"
      wrap={false}
    >
      <div
        className="css-1qcr7hz css-h7r55a"
      >
        <div
          className="css-1mhrjzj"
        >
          <img
            alt="Alternative text"
            src="url/to/image"
          />
        </div>
        <GridItem
          className="css-10fxwvh"
          component="div"
          grow={1}
          shrink={1}
        >
          <div
            className="css-10fxwvh css-1gs0ko2"
          >
            My Title
          </div>
        </GridItem>
      </div>
    </Grid>
  </div>
</Item>
`;

exports[`<List.Item /> should render with an onClick element 1`] = `
<Item
  className={null}
  image={null}
  isDisabled={false}
  isSelected={false}
  link={null}
  onClick={[Function]}
  rightComponent={null}
  testId={null}
  title="My Title"
>
  <div
    aria-hidden={true}
    data-test-id={null}
    onClick={[Function]}
  >
    <Glow
      className={null}
      color="#f7f7f7"
      styles={
        Object {
          "container": null,
          "glow": null,
        }
      }
    >
      <div
        aria-hidden={true}
        className="css-13azwyo"
        onTouchTap={[Function]}
        style={null}
      >
        <div
          className="css-1bmd5dz"
          style={Object {}}
        />
        <div
          data-test-id={null}
        >
          <Grid
            className="css-1qcr7hz"
            component="div"
            wrap={false}
          >
            <div
              className="css-1qcr7hz css-h7r55a"
            >
              <GridItem
                className="css-10fxwvh"
                component="div"
                grow={1}
                shrink={1}
              >
                <div
                  className="css-10fxwvh css-1gs0ko2"
                >
                  My Title
                </div>
              </GridItem>
            </div>
          </Grid>
        </div>
      </div>
    </Glow>
  </div>
</Item>
`;

exports[`<List.Item /> should render without a Glow when disabled 1`] = `
<Item
  className={null}
  image={null}
  isDisabled={true}
  isSelected={false}
  link={null}
  onClick={null}
  rightComponent={null}
  testId={null}
  title="My Title"
>
  <div
    data-test-id={null}
  >
    <Grid
      className="css-1qcr7hz"
      component="div"
      wrap={false}
    >
      <div
        className="css-1qcr7hz css-h7r55a"
      >
        <GridItem
          className="css-10fxwvh css-19uk9mv"
          component="div"
          grow={1}
          shrink={1}
        >
          <div
            className="css-10fxwvh css-19uk9mv css-1gs0ko2"
          >
            My Title
          </div>
        </GridItem>
      </div>
    </Grid>
  </div>
</Item>
`;

exports[`<List.Item /> should render without a Glow when selected 1`] = `
<Item
  className={null}
  image={null}
  isDisabled={false}
  isSelected={true}
  link={null}
  onClick={null}
  rightComponent={null}
  testId={null}
  title="My Title"
>
  <div
    data-test-id={null}
  >
    <Grid
      className="css-1qcr7hz css-14bkd8f"
      component="div"
      wrap={false}
    >
      <div
        className="css-1qcr7hz css-14bkd8f css-h7r55a"
      >
        <GridItem
          className="css-10fxwvh"
          component="div"
          grow={1}
          shrink={1}
        >
          <div
            className="css-10fxwvh css-1gs0ko2"
          >
            My Title
          </div>
        </GridItem>
      </div>
    </Grid>
  </div>
</Item>
`;
